moving from array to object

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </tr>
         <tr>
           <td>
-            {{specificStudent[0].name}}
+            {{specificStudent.name}}
           </td>
           <td>
-            {{specificStudent[0].age}}
+            {{specificStudent.age}}
           </td>
         </tr>
       </table>
