--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="container" ng-controller="StudentsController">
+    <div class="container" ng-controller="StudentsController" ng-init="getStudents()">
       <form ng-submit="addStudent()">
         <label>Name:</label>
         <input type="text" ng-model="student.name" required/>
