--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="container" ng-controller="StudentsController" ng-init="getStudents()">
+    <div class="container" ng-controller="StudentsController" data-ng-init="getStudents()">
       <form ng-submit="addStudent()">
         <label>Name:</label>
         <input type="text" ng-model="student.name" required/>
@@ -23,7 +23,7 @@
             Age
           </td>
         </tr>
-        <tr ng-repeat="student in students[0]">
+        <tr ng-repeat="student in students">
           <td>
             {{student.name}}
           </td>
